@@ -37,7 +37,6 @@ import org.apache.commons.lang3.math.NumberUtils;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static me.desht.pneumaticcraft.common.util.PneumaticCraftUtils.xlate;
 
@@ -104,7 +103,7 @@ public class ProgWidgetEmitRedstone extends ProgWidget implements IRedstoneEmiss
             List<String> l = Arrays.stream(DirectionUtil.VALUES)
                     .filter(side -> accessingSides[side.get3DDataValue()])
                     .map(ClientUtils::translateDirection)
-                    .collect(Collectors.toList());
+                    .toList();
             return Collections.singletonList(Component.literal(Strings.join(l, ", ")));
         }
     }
